# ShieldOps

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Procfile  README.md  alembic.ini  ideas1.md  ideas2.md  ideas3.md  mkdocs.yml  pyproject.toml  railway.toml  tasks.md
.claude/commands/: add-connector.md  add-integration.md  build-agent.md  check-health.md  create-playbook.md  deploy-agent.md  design-system.md  review-agent.md  run-agent.md  scan-security.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cd-backend.yml  cd-dashboard.yml  cd-production.yml  cd-staging.yml  ci.yml  gitops-sync.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_agent_registrations.py  004_add_incident_outcomes.py  005_add_security_scans.py  006_add_learning_cycles.py  007_add_vulnerability_management.py  008_add_newsletter_and_escalation.py  009_add_organizations.py  010_add_agent_context.py  011_add_api_keys.py  012_add_playbooks_table.py  013_add_notification_preferences.py  015_add_war_rooms.py
dashboard-ui/: .gitignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
dashboard-ui/e2e/: agent-factory.spec.ts  analytics.spec.ts  audit-log.spec.ts  cost.spec.ts  fixtures.ts  fleet-overview.spec.ts  investigations.spec.ts  learning.spec.ts  login.spec.ts  navigation.spec.ts  phase8-features.spec.ts  playbooks.spec.ts  productionization.spec.ts  remediations.spec.ts  security.spec.ts  user-management.spec.ts
dashboard-ui/public/: manifest.json
dashboard-ui/src/: App.tsx  index.css  main.tsx
docs/: DEPLOYMENT.md  QUICKSTART_DEMO.md  index.md  tasks.md
docs/agents/: automation-orchestrator.md  chatops.md  enterprise-integration.md  investigation.md  learning.md  remediation.md  security.md  supervisor.md
docs/api/: agents.md  analytics.md  authentication.md  automation-rules.md  chatops.md  enterprise-integrations.md  investigations.md  remediations.md  security.md
docs/architecture/: adr-001-langgraph-selection.md  adr-002-multi-cloud-abstraction.md  adr-003-agent-safety-model.md  adr-004-enterprise-chatops.md  agents.md  connectors.md  dashboard-design.md  overview.md  policy-engine.md  safety-model.md
docs/business/: competitive-analysis.md  financial-model-framework.md  gtm-playbook.md  pitch-deck-outline.md  productionization-plan.md
docs/contributing/: code-style.md  setup.md  testing.md
docs/deployment/: helm.md  kubernetes.md  local.md  multi-cloud.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/prd/: PRD-001-investigation-agent.md  PRD-002-remediation-agent.md  PRD-003-security-agent.md  PRD-004-unified-dashboard.md  PRD-005-multi-cloud-connectors.md  PRD-006-policy-engine.md  PRD-007-learning-agent.md
infrastructure/docker/: Dockerfile  docker-compose.yml
infrastructure/kubernetes/: configmap.yaml  dashboard-deployment.yaml  deployment.yaml  external-secrets.yaml  hpa.yaml  ingress.yaml  kafka.yaml  migration-job.yaml  namespace.yaml  networkpolicy.yaml  opa-deployment.yaml  opa-policies-configmap.yaml  pdb.yaml  redis.yaml  secret.yaml
infrastructure/railway/: railway.json
infrastructure/terraform/: .gitignore  cloudwatch.tf  ecr.tf  elasticache.tf  iam.tf  outputs.tf  rds.tf  secrets.tf  security_groups.tf  variables.tf
oss/shieldops-investigate/: LICENSE  README.md  pyproject.toml
oss/shieldops-investigate/examples/: basic_investigation.py  with_claude.py
oss/shieldops-investigate/src/shieldops_investigate/: __init__.py  cli.py  correlator.py  investigator.py  models.py
oss/shieldops-investigate/src/shieldops_investigate/sources/: __init__.py  kubernetes.py  prometheus.py
playbooks/: certificate-expiry.yaml  cpu-throttling.yaml  database-connections.yaml  deployment-failed.yaml  disk-pressure.yaml  high-latency.yaml  oom-kill.yaml  pending-pods.yaml  pod-crash-loop.yaml  service-unavailable.yaml
playbooks/k8s/: README.md  certificate-expiry.yml  connection-pool-exhaustion.yml  deployment-failure.yml  disk-pressure.yml  dns-failure.yml  high-latency.yml  memory-leak.yml  oom-kill.yml  pod-crash-loop.yml  rate-limiting.yml
playbooks/policies/: actions.rego  compliance.rego  rate_limits.rego  shieldops.rego  team_scoping.rego
playbooks/security/: cve-critical-patch.yaml  iac-misconfig-fix.yaml  k8s-rbac-remediation.yaml  network-exposure-fix.yaml  secret-leak-response.yaml
playbooks/templates/: aws-ec2-autoscale.yaml  cert-rotation.yaml  cost-rightsize.yaml  db-connection-pool.yaml  disk-space-cleanup.yaml  incident-response.yaml  k8s-pod-restart.yaml  security-patch.yaml
scripts/: generate_types.sh  seed_demo_data.py
src/shieldops/: __init__.py  cli.py
tests/: conftest.py
tests/integration/: conftest.py  test_aws_connector_moto.py  test_azure_connector_e2e.py  test_connector_router_multi.py  test_cost_agent_e2e.py  test_cross_connector_e2e.py  test_gcp_connector_e2e.py  test_investigation_e2e.py  test_investigation_to_remediation.py  test_learning_agent_e2e.py  test_policy_enforcement.py  test_remediation_e2e.py  test_security_e2e.py
tests/load/: README.md  config.js  helpers.js  smoke-test.js
tests/performance/: README.md  locustfile.py  test_benchmarks.py
tests/unit/: test_ab_testing_orchestrator.py  test_access_anomaly.py  test_access_certification.py  test_access_context_analyzer.py  test_access_governance_reviewer.py  test_access_review.py  test_action_tracker.py  test_active_directory_threat_monitor.py  test_adaptive_access_controller.py  test_adaptive_defense_controller.py  test_adaptive_load_engine.py  test_adaptive_retry_strategy_engine.py  test_adaptive_sampling_engine.py  test_adaptive_scaling_controller.py  test_adaptive_threshold_engine.py  test_admission_controller_enforcer.py  test_advantage_estimation_engine.py  (+1473 more)
(+2844 files in other folders)
