[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldops"
version = "0.1.0"
description = "AI-Powered Autonomous SRE Platform"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
authors = [
    { name = "ShieldOps Team" },
]

dependencies = [
    # Agent Framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.2.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database & Messaging
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "aiokafka>=0.12.0",

    # Infrastructure Connectors
    "boto3>=1.35.0",
    "kubernetes>=31.0.0",
    "asyncssh>=2.17.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "structlog>=24.4.0",

    # Policy Engine
    "opa-python-client>=1.3.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "faker>=33.0.0",
    "moto[s3,ec2,ecs,cloudtrail]>=5.0.0",
    "locust>=2.29.0",
]
dashboard = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
]

[project.scripts]
shieldops = "shieldops.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"src/shieldops/api/**/*.py" = ["B008"]  # Depends(), Query(), Body() in FastAPI signatures
"tests/**/*.py" = ["S106"]  # Hardcoded test tokens/passwords are expected in tests

[tool.ruff.lint.isort]
known-first-party = ["shieldops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (may require external services)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false  # type: ignore comments must work across local + pre-commit envs

[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore.*",
    "streamlit",
    "streamlit.*",
    "plotly",
    "plotly.*",
    "kubernetes_asyncio",
    "kubernetes_asyncio.*",
    "google.cloud",
    "google.cloud.*",
    "azure.identity",
    "azure.keyvault.*",
    "azure.mgmt.*",
    "winrm",
    "winrm.*",
    "aiosmtplib",
    "opentelemetry",
    "opentelemetry.*",
    "moto",
    "moto.*",
    "locust",
    "locust.*",
    "openpyxl",
    "openpyxl.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "shieldops.vulnerability.newsletter",
    "shieldops.vulnerability.escalation",
    "shieldops.vulnerability.alert_router",
    "shieldops.integrations.scanners.network_scanner",
    "shieldops.integrations.scanners.git_scanner",
    "shieldops.integrations.notifications.dispatcher",
    "shieldops.integrations.scanners.trivy",
    "shieldops.api.routes.newsletters",
    "shieldops.api.routes.vulnerabilities",
    "shieldops.api.routes.teams",
    "shieldops.api.routes.security_chat",
    "shieldops.agents.security.chat",
    "shieldops.db.repository",
    "shieldops.api.routes.feature_flags",
    "shieldops.api.routes.health_aggregate",
    "shieldops.api.routes.correlation",
    "shieldops.api.routes.escalation_policies",
    "shieldops.api.routes.agent_quotas",
    "shieldops.api.routes.batch_operations",
    "shieldops.api.routes.timeline",
    "shieldops.api.routes.export_engine",
    "shieldops.api.routes.environment_promotion",
    "shieldops.api.routes.api_lifecycle",
    "shieldops.api.routes.agent_collaboration",
    "shieldops.api.middleware.correlation",
    "shieldops.api.routes.postmortem",
    "shieldops.api.routes.dora_metrics",
    "shieldops.api.routes.alert_suppression",
    "shieldops.api.routes.oncall",
    "shieldops.api.routes.service_ownership",
    "shieldops.api.routes.runbook_executions",
    "shieldops.api.routes.incident_impact",
    "shieldops.api.routes.drift_detection",
    "shieldops.api.routes.cost_anomaly",
    "shieldops.api.routes.compliance_report_gen",
    "shieldops.api.routes.agent_benchmarks",
    "shieldops.api.routes.webhook_replay",
    "shieldops.api.routes.dependency_health",
    "shieldops.api.routes.deployment_freeze",
    "shieldops.api.routes.error_budget",
    "shieldops.api.routes.alert_grouping",
    "shieldops.api.routes.status_page",
    "shieldops.api.routes.rollback_registry",
    "shieldops.api.routes.capacity_reservation",
    "shieldops.api.routes.dependency_vuln_map",
    "shieldops.api.routes.readiness_review",
    "shieldops.api.routes.rate_limit_analytics",
    "shieldops.api.routes.agent_decisions",
    "shieldops.api.routes.runbook_scheduler",
    "shieldops.api.routes.war_room",
    "shieldops.api.routes.retrospective",
    "shieldops.api.routes.change_risk",
    "shieldops.api.routes.sla_violations",
    "shieldops.api.routes.tagging_compliance",
    "shieldops.api.routes.cost_attribution",
    "shieldops.api.routes.cost_normalizer",
    "shieldops.api.routes.temporal_patterns",
    "shieldops.api.routes.continuous_compliance",
    "shieldops.api.routes.third_party_risk",
    "shieldops.api.routes.roi_tracker",
    "shieldops.api.routes.infrastructure_map",
    "shieldops.api.routes.secret_rotation",
    "shieldops.api.routes.anomaly_correlation",
    "shieldops.api.routes.synthetic_monitor",
    "shieldops.api.routes.chaos_experiments",
    "shieldops.api.routes.data_quality",
    "shieldops.api.routes.canary_tracker",
    "shieldops.api.routes.incident_comms",
    "shieldops.api.routes.dependency_sla",
    "shieldops.api.routes.posture_scorer",
    "shieldops.api.routes.workload_fingerprint",
    "shieldops.api.routes.maintenance_window",
    "shieldops.api.routes.evidence_collector",
    "shieldops.api.routes.runbook_recommender",
    "shieldops.api.routes.incident_clustering",
    "shieldops.api.routes.policy_generator",
    "shieldops.api.routes.change_advisory",
    "shieldops.api.routes.sre_metrics",
    "shieldops.api.routes.health_report",
    "shieldops.api.routes.approval_delegation",
    "shieldops.api.routes.gap_analyzer",
    "shieldops.api.routes.cost_forecast",
    "shieldops.api.routes.deployment_risk",
    "shieldops.api.routes.capacity_trends",
    "shieldops.api.routes.incident_learning",
    "shieldops.api.routes.tenant_isolation",
    "shieldops.api.routes.alert_noise",
    "shieldops.api.routes.threshold_tuner",
    "shieldops.api.routes.severity_predictor",
    "shieldops.api.routes.impact_analyzer",
    "shieldops.api.routes.config_audit",
    "shieldops.api.routes.deployment_velocity",
    "shieldops.api.routes.compliance_automation",
    "shieldops.api.routes.knowledge_articles",
    "shieldops.api.routes.oncall_fatigue",
    "shieldops.api.routes.backup_verification",
    "shieldops.api.routes.cost_tag_enforcer",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
check_untyped_defs = false

[tool.coverage.run]
source = ["src/shieldops"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
