[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldops"
version = "0.1.0"
description = "AI-Powered Autonomous SRE Platform"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.12"
authors = [
    { name = "ShieldOps Team" },
]

dependencies = [
    # Agent Framework
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langsmith>=0.2.0",

    # API Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database & Messaging
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "aiokafka>=0.12.0",

    # Infrastructure Connectors
    "boto3>=1.35.0",
    "kubernetes>=31.0.0",
    "asyncssh>=2.17.0",

    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-instrumentation-redis>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "structlog>=24.4.0",

    # Policy Engine
    "opa-python-client>=1.3.0",

    # Auth
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "faker>=33.0.0",
    "moto[s3,ec2,ecs,cloudtrail]>=5.0.0",
    "locust>=2.29.0",
]
dashboard = [
    "streamlit>=1.41.0",
    "plotly>=5.24.0",
]

[project.scripts]
shieldops = "shieldops.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"src/shieldops/api/**/*.py" = ["B008"]  # Depends(), Query(), Body() in FastAPI signatures
"tests/**/*.py" = ["S106"]  # Hardcoded test tokens/passwords are expected in tests

[tool.ruff.lint.isort]
known-first-party = ["shieldops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (may require external services)",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false  # type: ignore comments must work across local + pre-commit envs

[[tool.mypy.overrides]]
module = [
    "boto3",
    "boto3.*",
    "botocore.*",
    "streamlit",
    "streamlit.*",
    "plotly",
    "plotly.*",
    "kubernetes_asyncio",
    "kubernetes_asyncio.*",
    "google.cloud",
    "google.cloud.*",
    "azure.identity",
    "azure.keyvault.*",
    "azure.mgmt.*",
    "winrm",
    "winrm.*",
    "aiosmtplib",
    "opentelemetry",
    "opentelemetry.*",
    "moto",
    "moto.*",
    "locust",
    "locust.*",
    "openpyxl",
    "openpyxl.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "shieldops.vulnerability.newsletter",
    "shieldops.vulnerability.escalation",
    "shieldops.vulnerability.alert_router",
    "shieldops.integrations.scanners.network_scanner",
    "shieldops.integrations.scanners.git_scanner",
    "shieldops.integrations.notifications.dispatcher",
    "shieldops.integrations.scanners.trivy",
    "shieldops.api.routes.newsletters",
    "shieldops.api.routes.vulnerabilities",
    "shieldops.api.routes.teams",
    "shieldops.api.routes.security_chat",
    "shieldops.agents.security.chat",
    "shieldops.db.repository",
    "shieldops.api.routes.feature_flags",
    "shieldops.api.routes.health_aggregate",
    "shieldops.api.routes.correlation",
    "shieldops.api.routes.escalation_policies",
    "shieldops.api.routes.agent_quotas",
    "shieldops.api.routes.batch_operations",
    "shieldops.api.routes.timeline",
    "shieldops.api.routes.export_engine",
    "shieldops.api.routes.environment_promotion",
    "shieldops.api.routes.api_lifecycle",
    "shieldops.api.routes.agent_collaboration",
    "shieldops.api.middleware.correlation",
    "shieldops.api.routes.postmortem",
    "shieldops.api.routes.dora_metrics",
    "shieldops.api.routes.alert_suppression",
    "shieldops.api.routes.oncall",
    "shieldops.api.routes.service_ownership",
    "shieldops.api.routes.runbook_executions",
    "shieldops.api.routes.incident_impact",
    "shieldops.api.routes.drift_detection",
    "shieldops.api.routes.cost_anomaly",
    "shieldops.api.routes.compliance_report_gen",
    "shieldops.api.routes.agent_benchmarks",
    "shieldops.api.routes.webhook_replay",
    "shieldops.api.routes.dependency_health",
    "shieldops.api.routes.deployment_freeze",
    "shieldops.api.routes.error_budget",
    "shieldops.api.routes.alert_grouping",
    "shieldops.api.routes.status_page",
    "shieldops.api.routes.rollback_registry",
    "shieldops.api.routes.capacity_reservation",
    "shieldops.api.routes.dependency_vuln_map",
    "shieldops.api.routes.readiness_review",
    "shieldops.api.routes.rate_limit_analytics",
    "shieldops.api.routes.agent_decisions",
    "shieldops.api.routes.runbook_scheduler",
    "shieldops.api.routes.war_room",
    "shieldops.api.routes.retrospective",
    "shieldops.api.routes.change_risk",
    "shieldops.api.routes.sla_violations",
    "shieldops.api.routes.tagging_compliance",
    "shieldops.api.routes.cost_attribution",
    "shieldops.api.routes.cost_normalizer",
    "shieldops.api.routes.temporal_patterns",
    "shieldops.api.routes.continuous_compliance",
    "shieldops.api.routes.third_party_risk",
    "shieldops.api.routes.roi_tracker",
    "shieldops.api.routes.infrastructure_map",
    "shieldops.api.routes.secret_rotation",
    "shieldops.api.routes.anomaly_correlation",
    "shieldops.api.routes.synthetic_monitor",
    "shieldops.api.routes.chaos_experiments",
    "shieldops.api.routes.data_quality",
    "shieldops.api.routes.canary_tracker",
    "shieldops.api.routes.incident_comms",
    "shieldops.api.routes.dependency_sla",
    "shieldops.api.routes.posture_scorer",
    "shieldops.api.routes.workload_fingerprint",
    "shieldops.api.routes.maintenance_window",
    "shieldops.api.routes.evidence_collector",
    "shieldops.api.routes.runbook_recommender",
    "shieldops.api.routes.incident_clustering",
    "shieldops.api.routes.policy_generator",
    "shieldops.api.routes.change_advisory",
    "shieldops.api.routes.sre_metrics",
    "shieldops.api.routes.health_report",
    "shieldops.api.routes.approval_delegation",
    "shieldops.api.routes.gap_analyzer",
    "shieldops.api.routes.cost_forecast",
    "shieldops.api.routes.deployment_risk",
    "shieldops.api.routes.capacity_trends",
    "shieldops.api.routes.incident_learning",
    "shieldops.api.routes.tenant_isolation",
    "shieldops.api.routes.alert_noise",
    "shieldops.api.routes.threshold_tuner",
    "shieldops.api.routes.severity_predictor",
    "shieldops.api.routes.impact_analyzer",
    "shieldops.api.routes.config_audit",
    "shieldops.api.routes.deployment_velocity",
    "shieldops.api.routes.compliance_automation",
    "shieldops.api.routes.knowledge_articles",
    "shieldops.api.routes.oncall_fatigue",
    "shieldops.api.routes.backup_verification",
    "shieldops.api.routes.cost_tag_enforcer",
    "shieldops.api.routes.dr_readiness",
    "shieldops.api.routes.service_catalog",
    "shieldops.api.routes.contract_testing",
    "shieldops.api.routes.orphan_detector",
    "shieldops.api.routes.latency_profiler",
    "shieldops.api.routes.license_scanner",
    "shieldops.api.routes.release_manager",
    "shieldops.api.routes.budget_manager",
    "shieldops.api.routes.config_parity",
    "shieldops.api.routes.incident_dedup",
    "shieldops.api.routes.access_certification",
    "shieldops.api.routes.toil_tracker",
    "shieldops.api.routes.trace_analyzer",
    "shieldops.api.routes.log_anomaly",
    "shieldops.api.routes.event_correlation",
    "shieldops.api.routes.security_incident",
    "shieldops.api.routes.vuln_lifecycle",
    "shieldops.api.routes.api_security",
    "shieldops.api.routes.tag_governance",
    "shieldops.api.routes.team_performance",
    "shieldops.api.routes.runbook_engine",
    "shieldops.api.routes.dependency_scorer",
    "shieldops.api.routes.burn_predictor",
    "shieldops.api.routes.change_intelligence",
    "shieldops.api.routes.db_performance",
    "shieldops.api.routes.queue_health",
    "shieldops.api.routes.cert_monitor",
    "shieldops.api.routes.network_flow",
    "shieldops.api.routes.dns_health",
    "shieldops.api.routes.escalation_analyzer",
    "shieldops.api.routes.right_sizer",
    "shieldops.api.routes.storage_optimizer",
    "shieldops.api.routes.resource_lifecycle",
    "shieldops.api.routes.alert_routing",
    "shieldops.api.routes.slo_advisor",
    "shieldops.api.routes.workload_scheduler",
    "shieldops.api.routes.cascade_predictor",
    "shieldops.api.routes.resilience_scorer",
    "shieldops.api.routes.timeline_reconstructor",
    "shieldops.api.routes.reserved_instance_optimizer",
    "shieldops.api.routes.cost_anomaly_rca",
    "shieldops.api.routes.spend_allocation",
    "shieldops.api.routes.container_scanner",
    "shieldops.api.routes.cloud_posture_manager",
    "shieldops.api.routes.secrets_detector",
    "shieldops.api.routes.runbook_effectiveness",
    "shieldops.api.routes.api_deprecation_tracker",
    "shieldops.api.routes.dependency_freshness",
    "shieldops.api.routes.chaos_designer",
    "shieldops.api.routes.game_day_planner",
    "shieldops.api.routes.failure_mode_catalog",
    "shieldops.api.routes.oncall_optimizer",
    "shieldops.api.routes.alert_correlation_rules",
    "shieldops.api.routes.review_board",
    "shieldops.api.routes.commitment_planner",
    "shieldops.api.routes.cost_simulator",
    "shieldops.api.routes.finops_maturity",
    "shieldops.api.routes.change_failure_tracker",
    "shieldops.api.routes.toil_recommender",
    "shieldops.api.routes.sli_pipeline",
    "shieldops.api.routes.deployment_cadence",
    "shieldops.api.routes.metric_baseline",
    "shieldops.api.routes.incident_timeline",
    "shieldops.api.routes.service_health_agg",
    "shieldops.api.routes.alert_fatigue",
    "shieldops.api.routes.change_window",
    "shieldops.api.routes.resource_waste",
    "shieldops.api.routes.evidence_chain",
    "shieldops.api.routes.dependency_update_planner",
    "shieldops.api.routes.capacity_forecast_engine",
    "shieldops.api.routes.runbook_versioner",
    "shieldops.api.routes.team_skill_matrix",
    "shieldops.api.routes.error_budget_policy",
    "shieldops.api.routes.reliability_target",
    "shieldops.api.routes.severity_calibrator",
    "shieldops.api.routes.dependency_mapper",
    "shieldops.api.routes.alert_rule_linter",
    "shieldops.api.routes.deployment_gate",
    "shieldops.api.routes.billing_reconciler",
    "shieldops.api.routes.chargeback_engine",
    "shieldops.api.routes.compliance_drift",
    "shieldops.api.routes.comm_planner",
    "shieldops.api.routes.infra_drift_reconciler",
    "shieldops.api.routes.service_maturity",
    "shieldops.api.routes.anomaly_forecast",
    "shieldops.api.routes.api_contract_validator",
    "shieldops.api.routes.automation_coverage",
    "shieldops.api.routes.config_change_tracker",
    "shieldops.api.routes.cross_team_risk",
    "shieldops.api.routes.knowledge_gap",
    "shieldops.api.routes.perf_regression",
    "shieldops.api.routes.recurrence_predictor",
    "shieldops.api.routes.regulatory_monitor",
    "shieldops.api.routes.rollback_advisor",
    "shieldops.api.routes.savings_tracker",
    "shieldops.api.routes.spot_instance_manager",
    "shieldops.api.routes.capacity_right_timing",
    "shieldops.api.routes.outage_predictor",
    "shieldops.api.routes.impact_quantifier",
    "shieldops.api.routes.policy_violation_tracker",
    "shieldops.api.routes.deploy_health_scorer",
    "shieldops.api.routes.runbook_gap_analyzer",
    "shieldops.api.routes.credential_expiry_forecaster",
    "shieldops.api.routes.oncall_workload_balancer",
    "shieldops.api.routes.cost_anomaly_predictor",
    "shieldops.api.routes.evidence_scheduler",
    "shieldops.api.routes.latency_budget_tracker",
    "shieldops.api.routes.change_conflict_detector",
    "shieldops.api.routes.duration_predictor",
    "shieldops.api.routes.resource_exhaustion",
    "shieldops.api.routes.alert_storm_correlator",
    "shieldops.api.routes.canary_analyzer",
    "shieldops.api.routes.sla_cascader",
    "shieldops.api.routes.handoff_tracker",
    "shieldops.api.routes.unit_economics",
    "shieldops.api.routes.idle_resource_detector",
    "shieldops.api.routes.penalty_calculator",
    "shieldops.api.routes.posture_trend",
    "shieldops.api.routes.evidence_freshness",
    "shieldops.api.routes.access_anomaly",
]
warn_return_any = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_generics = false
check_untyped_defs = false

[tool.coverage.run]
source = ["src/shieldops"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
